base/builds/regulus/argocd/projects/landingpage/manifests/homepage/Service-homepage.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/name: homepage
  type: ClusterIP
