base/builds/regulus/argocd/projects/landingpage/manifests/homepage/HTTPRoute-homepage.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  hostnames:
  - homepage.apps.phalnet.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-ingress
    namespace: default
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: homarr
      port: 7575
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
